--- a/Web/CyKITv2.html
+++ b/Web/CyKITv2.html
@@ -1,6 +1,6 @@
 <!-- 
-    CyKITv2 2017.12.28
-    ==================== 
+    CyKITv2 2017.Jan.19
+    ===================== 
     Written by Warren
     
     HTML Main Access.
@@ -20,7 +20,7 @@
             <div id="innerBar" style="margin-left:21%; margin-top:1%; color:white; background: rgba(0,0,0,0.3); min-width:300px;  max-width:400px; border-radius: 10px; width:30%; ">
               <div style="position:relative; left:15px; top:8px;">
                 Host <input id="cyHost" type="text" value="127.0.0.1" /> 
-                Port <input id="cyPort" type="text" maxlength="5" size="5" value="55555" /> 
+                Port <input id="cyPort" type="text" maxlength="5" size="5" value="55555"/> 
                 <div style="margin-top:12px; left:4%;">
                  <input id="cyConnect" class="w3-bar-item w3-black  w3-hover-blue" type="button" value="Connect" />
                  <input id="cyDisconnect" class="w3-bar-item w3-black w3-hover-red" type="button" value="Disconnect" />
