--- a/Web/CyKITv2.html
+++ b/Web/CyKITv2.html
@@ -1,5 +1,5 @@
 <!-- 
-    CyKITv2 2018.Jan.19
+    CyKITv2 2017.Jan.22
     ===================== 
     Written by Warren
     
@@ -52,7 +52,7 @@
                     </div>
                     <br><br>
                     <input id="CyScroll" type="checkbox"> &nbsp Scroll</input><br><br>
-                    <input id="manualControl" type="checkbox" checked> &nbsp Manual Control</input> <br><br>
+                    <input id="manualControl" type="checkbox"> &nbsp Manual Control</input> <br><br>
                     <input id="setMask" type="checkbox"> &nbsp Masking (Advanced)</input>
                     <div id="cyManual" style="visibility:visible;">
                     <br>View Sensor: <select id="CySelect"></select> <br><br>
